--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development --open --env.development",
-    "build": "webpack --production --env.production"
+    "build": "webpack --production --env.production",
+    "start": "node index.js"
   },
   "devDependencies": {
     "webpack": "^4.29.6",
@@ -13,7 +14,8 @@
     "webpack-dev-server": "^3.2.1",
     "babel-loader": "^8.0.5",
     "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.2"
+    "@babel/preset-env": "^7.4.2",
+    "express": "^4.16.4"
   },
   "keywords": [],
   "author": "Luis Gustavo Burigo Alexandre <gugaba29@gmail.com>",
