--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
   "orientation": "any",
   "icons": [
     {
-      "src": "/download.jpg",
+      "src": "public/download.jpg",
       "sizes": "512x512",
       "type": "image/png"
     }
